Big Changes done
Created new table Position, New Controller, Model and Views.
Still working....

--- a/JobWebApp/Views/JobOffers/Delete.cshtml
+++ b/JobWebApp/Views/JobOffers/Delete.cshtml
@@ -59,13 +59,13 @@
                     <input asp-for="Wage" class="form-control" disabled />
                     <span asp-validation-for="Wage" class="text-danger"></span>
                 </div>
-
-                <div class="form-group">
-                    <p><span></span></p>
+                <div class="row">
+                    <div class="form-group">
+                    <br>
                     <a asp-controller="JobOffers" asp-action="Index" class="btn btn-success"> Return without delet</a>
-                    <input type="submit" value="Delete" class="btn btn-danger"></>
-                    
-                </div>
+                    <input type="submit" value="Delete" class="btn btn-danger"></>                    
+                    </div>
+                </div>                
             </form>
         </div>
     </div>
