New Version. Full functioning.
Repaired the errors.
Validation for delete jobs included.
New colors.

--- a/JobWebApp/Views/Shared/_Layout.cshtml
+++ b/JobWebApp/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">JobWebApp</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -20,10 +20,13 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>                        
+                        </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="JobOffers" asp-action="Index"> Crud JobApp</a>
-                        </li>                        
+                            <a class="nav-link text-dark" asp-area="" asp-controller="JobOffer" asp-action="Index"> Job Offers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Position" asp-action="Index">Position Types</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -35,9 +38,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer">
         <div class="container">
-            &copy; 2021 - JobWebApp - Luis Martins
+            <span>&copy; 2021 - JobWebApp - Luis Martins - </span>            
             @*<a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>*@
         </div>
     </footer>
