--- a/JobWebApp/Views/JobOffer/Edit.cshtml
+++ b/JobWebApp/Views/JobOffer/Edit.cshtml
@@ -9,35 +9,48 @@
 
     <h4>JobOffer</h4>
     <hr />
+
     <form asp-action="Edit">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="col-md-4">
+            <input type="hidden" asp-for="JobOffer.Id" />
             <div class="form-group">
                 <label asp-for="JobOffer.Title" class="control-label"></label>
                 <input asp-for="JobOffer.Title" class="form-control" />
                 <span asp-validation-for="JobOffer.Title" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="JobOffer.IdType" class="control-label"></label>
+                <select asp-for="JobOffer.IdType" asp-items="@Model.PositionDropDown" class="form-control"></select>
+                <span asp-validation-for="JobOffer.IdType" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="col-md-10">
+            <div class="offset-md-5">
+                <a asp-controller="Position" asp-action="Create" class="btn btn-outline-info">Create New PositionType</a>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="form-group">
                 <label asp-for="JobOffer.Local" class="control-label"></label>
                 <input asp-for="JobOffer.Local" class="form-control" />
                 <span asp-validation-for="JobOffer.Local" class="text-danger"></span>
             </div>
         </div>
-        <div class="col-md-10">
+        <div class="col-md-12">
             <div class="form-group">
                 <label asp-for="JobOffer.Description" class="control-label"></label>
-                <textarea asp-for="JobOffer.Description" class="form-control" rows="3"></textarea>
+                <textarea asp-for="JobOffer.Description" class="form-control" rows="4"></textarea>
                 <span asp-validation-for="JobOffer.Description" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <label asp-for="JobOffer.Responsibility" class="control-label"></label>
-                <textarea asp-for="JobOffer.Responsibility" class="form-control" rows="3"></textarea>
+                <textarea asp-for="JobOffer.Responsibility" class="form-control" rows="4"></textarea>
                 <span asp-validation-for="JobOffer.Responsibility" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="JobOffer.Requirement" class="control-label"></label>
-                <textarea asp-for="JobOffer.Requirement" class="form-control" rows="3"></textarea>
+                <textarea asp-for="JobOffer.Requirement" class="form-control" rows="4"></textarea>
                 <span asp-validation-for="JobOffer.Requirement" class="text-danger"></span>
             </div>
         </div>
@@ -57,30 +70,17 @@
                 <input asp-for="JobOffer.Contribution" class="form-control" />
                 <span asp-validation-for="JobOffer.Contribution" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="JobOffer.IdType" class="control-label"></label>
-                <select asp-for="JobOffer.IdType" asp-items="@Model.PositionDropDown" class="form-control">
-                    <option selected>--Select Job type --</option>
-                </select>
-                <span asp-validation-for="JobOffer.IdType" class="text-danger"></span>
-            </div>
         </div>
-        <br>
-        <div class="col-8 align-self-end">
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-outline-success" />
-                <a asp-action="Index" class="btn btn-outline-primary">Back to List</a>
-            </div>
+        <br />
+        <div class="form-group">
+            <input type="submit" class="btn btn-outline-success" value="Save" />
+            <a asp-action="Index" class="btn btn-outline-primary">Back to List</a>
         </div>
     </form>
-
-    <div>
-
-    </div>
-
-    @section Scripts{
-        @{ <partial name="_ValidationScriptsPartial" />
-    }
-    }
-
 </body>
+
+@section Scripts{
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+}
