--- a/JobWebApp/Views/JobOffer/Detail.cshtml
+++ b/JobWebApp/Views/JobOffer/Detail.cshtml
@@ -54,10 +54,10 @@
                 @Html.DisplayFor(model => model.Wage)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Contribution)
+                @Html.DisplayNameFor(model => model.Benefit)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Contribution)
+                @Html.DisplayFor(model => model.Benefit)
             </dd>
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.ModWage)
