--- a/JobWebApp/Views/JobOffer/Edit.cshtml
+++ b/JobWebApp/Views/JobOffer/Edit.cshtml
@@ -66,9 +66,9 @@
                 <span asp-validation-for="JobOffer.Wage" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="JobOffer.Contribution" class="control-label"></label>
-                <input asp-for="JobOffer.Contribution" class="form-control" />
-                <span asp-validation-for="JobOffer.Contribution" class="text-danger"></span>
+                <label asp-for="JobOffer.Benefit" class="control-label"></label>
+                <input asp-for="JobOffer.Benefit" class="form-control" />
+                <span asp-validation-for="JobOffer.Benefit" class="text-danger"></span>
             </div>
         </div>
         <br />
