--- a/JobWebApp/Views/JobOffer/Index.cshtml
+++ b/JobWebApp/Views/JobOffer/Index.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<div id="PlaceHolderHere"></div>
 <body style="background-color:#c4ddd3;">
 
     @if (TempData["message"] != null)
@@ -16,9 +18,6 @@
         </div>
     }
 
-
-
-
     <div class="row pt-4">
         <div class="col-6">
             <h2 class="text-primary">Job Offers List</h2>
@@ -28,7 +27,6 @@
         </div>
     </div>
     <br />
-
     @if (Model.Count() > 0)
     {
         <table class="table table-striped table-hover" stile="width:100%">
@@ -69,22 +67,25 @@
                         </td>
                         <td>
                             <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-success">Edit</a>
-                            <a asp-action="Detail" asp-route-id="@item.Id" class="btn btn-outline-primary">Detail</a>
-                            <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger">Delete</a>
+
+                            <button type="button" class="btn btn-outline-primary" data-toggle="ajax-modal" data-target="#detailJobOffer"
+                                    data-url="@Url.Action($"Detail/{item.Id}")">
+                                Detail
+                            </button> <!-- chama a modal detalhe daqui-->
+
+                            <button type="button" class="btn btn-outline-danger" data-toggle="ajax-modal" data-target="#deleteJobOffer"
+                                    data-url="@Url.Action($"Delete/{item.Id}")">
+                                Delete
+                            </button>  <!-- chamar a modal delete daqui-->
+
                         </td>
                     </tr>
                 }
             </tbody>
         </table>
-
     }
     else
     {
         <p>No jobs created yet</p>
     }
-
-    <div class="modal" id="modal">
-
-
-    </div>
 </body>
