Minor changes in date formats.

--- a/JobWebApp/Views/Home/Index.cshtml
+++ b/JobWebApp/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
         <div class="card border-primary mb-3" style="max-width: 36rem;" margin-left="auto" margin-right="auto">
             <div class="card-header">Task</div>
             <div class="card-body">
-                <h4 class="card-title">Develop an Application to controll Job Offers</h4>
+                <h4 class="card-title">Task 1. Develop an Application to controll Job Offers</h4>
                 <p class="card-text"> Web Application com cadastrar, visualizar, deletar e editar vagas de trabalho:</p>
                 <p>- Linguagem: .NET (Framework ou Core)</p>
                 <p>- Arquitetura: MVC (ASP.NET MVC)</p>
@@ -39,8 +39,19 @@
                 <p>- Database SqlServer</p>
             </div>
         </div>
+
+        <div class="card border-primary mb-3" style="max-width: 36rem;" margin-left="auto" margin-right="auto">
+            <div class="card-header">Task</div>
+            <div class="card-body">
+                <h4 class="card-title">Task 2. Continuação da tarefa 1</h4>
+                <p class="card-text"> Na Web Application da Task 1:</p>
+                <p>- Na tela de cadastro de job adicionar campo  % de beneficio</p>
+                <p>- Tela de detalhes aparecer em popup na tela de detalhe mostrar o % de benefios calculado</p>
+                <p>- Mudar  o processo de Delete</p>
+                <p>- Vai abrir uma nova tela com alguns dados da vaga e para deletar o usuario precisara confirmar o campo title</p>
+                <p>- Adicionar Tipo de trabalho como uma referencia para outra tabela</p>                
+            </div>
+        </div>
+
     </Section>
 </body>
-
-
-
